--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "mews/purifier": "^3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
